PO-2388-Remove duplicate EncoderDecoders and replace Sun's BASE64Encoder/Decoder with commons-codec's encoder/decoders in Viewer/Registry -- Peer review ludetc
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@10033 553898ca-32d5-487a-af8b-6cf4ca579ab4